Remove reverse, printa a lista item por item

--- a/Git1_Aula.ipynb
+++ b/Git1_Aula.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Git1 - Aula.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPV26E0diHcGmGwlY6dCiMm",
+      "authorship_tag": "ABX9TyO/l+ebAlFUnBuYp8swaRuh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,27 +84,29 @@
     {
       "cell_type": "code",
       "source": [
-        "lista.reverse()\n",
-        "lista"
+        "for i in lista:\n",
+        "  print(i)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fpWtP6aMspwR",
-        "outputId": "8aa85327-53bf-404b-be30-5d73770b5c66"
+        "outputId": "e7e7824a-375f-4973-b90d-4fd182aa8112"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[6, 5, 4, 3, 2, 1]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n",
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n"
+          ]
         }
       ]
     }
